<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/container_fragment"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.session.setup.ResultFragment">

    <TextView
            android:id="@+id/label_results"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/label_ready"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:textSize="28sp"
            android:textAlignment="center"
            android:text="@string/label_ready_journey"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/label_results"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/icon_logo_256"
            android:contentDescription="@string/cd_logo"
            app:layout_constraintVertical_bias="0.10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <ubb.license.david.monumentalv0.ui.FlatButton
            android:id="@+id/button_retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:text="@string/adjust_parameters"
            app:invertColors="true"
            app:layout_constraintEnd_toEndOf="@+id/button_next"
            app:layout_constraintBottom_toTopOf="@+id/button_next"
            app:layout_constraintStart_toEndOf="@+id/button_cancel" />

    <ubb.license.david.monumentalv0.ui.FlatButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:text="@string/cancel"
            app:invertColors="true"
            app:layout_constraintStart_toStartOf="@+id/button_next"
            app:layout_constraintTop_toTopOf="@+id/button_retry"
            app:layout_constraintBottom_toBottomOf="@+id/button_retry"
            app:layout_constraintEnd_toStartOf="@+id/button_retry" />

    <ubb.license.david.monumentalv0.ui.FlatButton
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="bottomButtonTransition"
            app:text="@string/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>